recommended changed from IDEA